2008-10-27 Dietmar Warning
 * src/spicelib/parser/inp2q.c VBIC is standard - not ADMS (yet)
 * src/spicelib/devices/vbic/vbicnoise.c correct naming array order according vbicdefs.h

2008-10-14 Dietmar Warning
 * src/main.c, src/misc/util.c polish to prevent warnings

2008-10-11 Holger Vogt
 * /frontend/resource.c line 41 correct __MINGW32__
   /ciderlib/input/options.c renamed to optionsc.c to avoid double options.obj in VC++ 2008

2008-10-05 Holger Vogt
 * Macros added to allow compilation of tclspice with MS Visual C++ 2008

2008-09-24 Holger Vogt
 * wstdio.h, scalb.c, complex.h
   Small changes to allow compilation with MS Visual C++ 2008
   main.c, util.c: path of *.cir input file as search path for .include files (Windows only)

2008-09-22 Holger Vogt
 * complex.h, measure.c, resource.c, windisp.c, xpressn.c, rawfile.c, runcoms.c, readhelp.c,
   defines.h, ngspice.h, b4soild.c, hsm1eval102.c, hsm1eval112.c, hsm1eval120.c, wstdio.h
   Small changes to allow compilation with MS Visual C++ 2008

2008-09-15 Lionel Sainte Cluque
  * src/Makefile.am: Add $(DESTDIR) in tclspice installation, required by debian package.
  * src/Makefile.am: Use -no-undefined only for windows build (libspice_la_LDFLAGS)

2008-09-13 Holger Vogt
 * configure.in: add AC_LIBTOOL_WIN32_DLL
 * src/makefile.am correct typo

2008-09-13 Holger Vogt
 * configure.in: add /mingw as search path for tcl
 * tclspice.c: replace sigsetjump and sigjmp_buf with macros from macros.h
 
2008-09-09 Lionel Sainte Cluque
 * configure.in: tclspice checks moved before Operating System checks: To set
 no_x flag before it is used.
 * tests/tcl-testbench*: chmod a+x tcl-testbench*.tcl

2008-09-01
 * configure.in: CAPZEROBYPASS is enabled by default now. To disable it you
   can add --disable-capzerobypass to configure command.  

2008-08-27 Paolo Nenzi
 * --- TCLSPICE initial integration (Lionel Sainte Cluque) ---
 * Makefile.am: Makefiles changed for libtool. We use still .a files but we let